--- a/Practical_Machine_Learning.html
+++ b/Practical_Machine_Learning.html
@@ -57,7 +57,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 <div id="assignment-overview" class="section level3">
 <h3>Assignment overview</h3>
-<p>Using devices such as Jawbone Up, Nike FuelBand, and Fitbit it is now possible to collect a large amount of data about personal activity relatively inexpensively. These type of devices are part of the quantified self movement  a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. One thing that people regularly do is quantify how much of a particular activity they do, but they rarely quantify how well they do it. In this project, we will use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants. They were asked to perform barbell lifts correctly and incorrectly in 5 different ways. More information is available from the website here: <a href="http://groupware.les.inf.puc-rio.br/har">http://groupware.les.inf.puc-rio.br/har</a> (see the section on the Weight Lifting Exercise Dataset).</p>
+<p>Using devices such as Jawbone Up, Nike FuelBand, and Fitbit it is now possible to collect a large amount of data about personal activity relatively inexpensively. These type of devices are part of the quantified self movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. One thing that people regularly do is quantify how much of a particular activity they do, but they rarely quantify how well they do it. In this project, we will use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants. They were asked to perform barbell lifts correctly and incorrectly in 5 different ways. More information is available from the website here: <a href="http://groupware.les.inf.puc-rio.br/har">http://groupware.les.inf.puc-rio.br/har</a> (see the section on the Weight Lifting Exercise Dataset).</p>
 <p>The goal of this project is to predict the manner in which they did the exercise. This is the “classe” variable in the training set. We may use any of the other variables to predict with. The task is to create a report describing</p>
 <ul>
 <li>how the model was built.</li>
@@ -74,6 +74,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 library(rattle)
 library(rpart.plot)
 library(randomForest)
+library(doMC)
+registerDoMC(4)
 set.seed(3433)</code></pre>
 <p>After this, I started with some preliminary data exploration. Looking at the dataset, I saw the first column was displaying the record number, so I dropped this column from my data set.</p>
 <pre class="r"><code>url_training &lt;- &quot;http://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv&quot;
@@ -97,6 +99,80 @@ training_pruned&lt;-training[,-LowVar]</code></pre>
 validation_pruned2 &lt;- validation_pruned[,colSums(is.na(training_pruned))&lt;14000]
 testing_pruned &lt;- testing[,-LowVar]
 testing_pruned2 &lt;- testing_pruned[,colSums(is.na(training_pruned))&lt;14000]</code></pre>
+</div>
+<div id="modeling" class="section level3">
+<h3>Modeling</h3>
+<p>My first try was to use a Classification tree. I decided not to center and scale the variables, since this is not really useful for this method.</p>
+<pre class="r"><code>modFit1 &lt;- train(classe ~ .,method=&quot;rpart&quot;,data=training_pruned2)</code></pre>
+<pre><code>## Loading required namespace: e1071</code></pre>
+<pre class="r"><code>test_tree &lt;- predict(modFit1,validation_pruned2)
+confusionMatrix(test_tree,validation_pruned2$classe)</code></pre>
+<pre><code>## Confusion Matrix and Statistics
+## 
+##           Reference
+## Prediction    A    B    C    D    E
+##          A 1055  238   26   27   12
+##          B   91  397   11    0    0
+##          C   70  163  437   18   51
+##          D  177  151  381  759  438
+##          E    2    0    0    0  400
+## 
+## Overall Statistics
+##                                         
+##                Accuracy : 0.622         
+##                  95% CI : (0.608, 0.635)
+##     No Information Rate : 0.284         
+##     P-Value [Acc &gt; NIR] : &lt;2e-16        
+##                                         
+##                   Kappa : 0.525         
+##  Mcnemar's Test P-Value : NA            
+## 
+## Statistics by Class:
+## 
+##                      Class: A Class: B Class: C Class: D Class: E
+## Sensitivity             0.756    0.418   0.5111    0.944   0.4440
+## Specificity             0.914    0.974   0.9254    0.720   0.9995
+## Pos Pred Value          0.777    0.796   0.5913    0.398   0.9950
+## Neg Pred Value          0.904    0.875   0.8996    0.985   0.8887
+## Prevalence              0.284    0.194   0.1743    0.164   0.1837
+## Detection Rate          0.215    0.081   0.0891    0.155   0.0816
+## Detection Prevalence    0.277    0.102   0.1507    0.389   0.0820
+## Balanced Accuracy       0.835    0.696   0.7183    0.832   0.7217</code></pre>
+<p>The result was a bit disappointing so I tried the random forest method next.</p>
+<pre class="r"><code>modFit2 &lt;- train(classe ~ .,method=&quot;rf&quot;,data=training_pruned2)
+test &lt;- predict(modFit2,validation_pruned2)
+confusionMatrix(test,validation_pruned2$classe)</code></pre>
+<pre><code>## Confusion Matrix and Statistics
+## 
+##           Reference
+## Prediction    A    B    C    D    E
+##          A 1395    1    0    0    0
+##          B    0  948    1    0    0
+##          C    0    0  852    0    0
+##          D    0    0    2  804    0
+##          E    0    0    0    0  901
+## 
+## Overall Statistics
+##                                     
+##                Accuracy : 0.999     
+##                  95% CI : (0.998, 1)
+##     No Information Rate : 0.284     
+##     P-Value [Acc &gt; NIR] : &lt;2e-16    
+##                                     
+##                   Kappa : 0.999     
+##  Mcnemar's Test P-Value : NA        
+## 
+## Statistics by Class:
+## 
+##                      Class: A Class: B Class: C Class: D Class: E
+## Sensitivity             1.000    0.999    0.996    1.000    1.000
+## Specificity             1.000    1.000    1.000    1.000    1.000
+## Pos Pred Value          0.999    0.999    1.000    0.998    1.000
+## Neg Pred Value          1.000    1.000    0.999    1.000    1.000
+## Prevalence              0.284    0.194    0.174    0.164    0.184
+## Detection Rate          0.284    0.193    0.174    0.164    0.184
+## Detection Prevalence    0.285    0.194    0.174    0.164    0.184
+## Balanced Accuracy       1.000    0.999    0.998    1.000    1.000</code></pre>
 </div>
 
 
