--- a/Practical_Machine_Learning.html
+++ b/Practical_Machine_Learning.html
@@ -77,19 +77,120 @@ library(randomForest)
 library(doMC)
 registerDoMC(4)
 set.seed(3433)</code></pre>
-<p>After this, I started with some preliminary data exploration. Looking at the dataset, I saw the first column was displaying the record number, so I dropped this column from my data set.</p>
+<p>After this, I started with some preliminary data exploration. Looking at the dataset, I saw the first column was displaying the record number, and so I dropped this column from my data set. The next five columns were also not useful for prediction purposes.</p>
 <pre class="r"><code>url_training &lt;- &quot;http://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv&quot;
 url_testing &lt;- &quot;http://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv&quot;
 pml.training &lt;- read.csv(url_training, header=TRUE)
 pml.testing &lt;- read.csv(url_testing, header=TRUE)</code></pre>
-<p>I split my dataset in a training set and a validation set.</p>
-<pre class="r"><code>inTrain = createDataPartition(pml.training$classe, p = 3/4)[[1]]
-training = pml.training[inTrain,-1]
-validation = pml.training[-inTrain,-1]
-testing = pml.testing[,-1]</code></pre>
 <p>Next I had a a look at the variables, their type and their values.</p>
-<pre class="r"><code>str(training)</code></pre>
-<p>I noticed there were a lot of variables with a large amount of empty values and/or NA. I tried to get rid of these by removing the columns with near zero variance.</p>
+<pre class="r"><code>str(pml.training)</code></pre>
+<pre><code>## 'data.frame':    19622 obs. of  160 variables:
+##  $ X                       : int  1 2 3 4 5 6 7 8 9 10 ...
+##  $ user_name               : Factor w/ 6 levels &quot;adelmo&quot;,&quot;carlitos&quot;,..: 2 2 2 2 2 2 2 2 2 2 ...
+##  $ raw_timestamp_part_1    : int  1323084231 1323084231 1323084231 1323084232 1323084232 1323084232 1323084232 1323084232 1323084232 1323084232 ...
+##  $ raw_timestamp_part_2    : int  788290 808298 820366 120339 196328 304277 368296 440390 484323 484434 ...
+##  $ cvtd_timestamp          : Factor w/ 20 levels &quot;02/12/2011 13:32&quot;,..: 9 9 9 9 9 9 9 9 9 9 ...
+##  $ new_window              : Factor w/ 2 levels &quot;no&quot;,&quot;yes&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ num_window              : int  11 11 11 12 12 12 12 12 12 12 ...
+##  $ roll_belt               : num  1.41 1.41 1.42 1.48 1.48 1.45 1.42 1.42 1.43 1.45 ...
+##  $ pitch_belt              : num  8.07 8.07 8.07 8.05 8.07 8.06 8.09 8.13 8.16 8.17 ...
+##  $ yaw_belt                : num  -94.4 -94.4 -94.4 -94.4 -94.4 -94.4 -94.4 -94.4 -94.4 -94.4 ...
+##  $ total_accel_belt        : int  3 3 3 3 3 3 3 3 3 3 ...
+##  $ kurtosis_roll_belt      : Factor w/ 397 levels &quot;&quot;,&quot;0.000673&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ kurtosis_picth_belt     : Factor w/ 317 levels &quot;&quot;,&quot;0.006078&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ kurtosis_yaw_belt       : Factor w/ 2 levels &quot;&quot;,&quot;#DIV/0!&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ skewness_roll_belt      : Factor w/ 395 levels &quot;&quot;,&quot;0.000000&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ skewness_roll_belt.1    : Factor w/ 338 levels &quot;&quot;,&quot;0.000000&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ skewness_yaw_belt       : Factor w/ 2 levels &quot;&quot;,&quot;#DIV/0!&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ max_roll_belt           : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ max_picth_belt          : int  NA NA NA NA NA NA NA NA NA NA ...
+##  $ max_yaw_belt            : Factor w/ 68 levels &quot;&quot;,&quot;0.0&quot;,&quot;-0.1&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ min_roll_belt           : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ min_pitch_belt          : int  NA NA NA NA NA NA NA NA NA NA ...
+##  $ min_yaw_belt            : Factor w/ 68 levels &quot;&quot;,&quot;0.0&quot;,&quot;-0.1&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ amplitude_roll_belt     : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ amplitude_pitch_belt    : int  NA NA NA NA NA NA NA NA NA NA ...
+##  $ amplitude_yaw_belt      : Factor w/ 4 levels &quot;&quot;,&quot;0.00&quot;,&quot;0.0000&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ var_total_accel_belt    : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ avg_roll_belt           : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ stddev_roll_belt        : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ var_roll_belt           : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ avg_pitch_belt          : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ stddev_pitch_belt       : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ var_pitch_belt          : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ avg_yaw_belt            : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ stddev_yaw_belt         : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ var_yaw_belt            : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ gyros_belt_x            : num  0 0.02 0 0.02 0.02 0.02 0.02 0.02 0.02 0.03 ...
+##  $ gyros_belt_y            : num  0 0 0 0 0.02 0 0 0 0 0 ...
+##  $ gyros_belt_z            : num  -0.02 -0.02 -0.02 -0.03 -0.02 -0.02 -0.02 -0.02 -0.02 0 ...
+##  $ accel_belt_x            : int  -21 -22 -20 -22 -21 -21 -22 -22 -20 -21 ...
+##  $ accel_belt_y            : int  4 4 5 3 2 4 3 4 2 4 ...
+##  $ accel_belt_z            : int  22 22 23 21 24 21 21 21 24 22 ...
+##  $ magnet_belt_x           : int  -3 -7 -2 -6 -6 0 -4 -2 1 -3 ...
+##  $ magnet_belt_y           : int  599 608 600 604 600 603 599 603 602 609 ...
+##  $ magnet_belt_z           : int  -313 -311 -305 -310 -302 -312 -311 -313 -312 -308 ...
+##  $ roll_arm                : num  -128 -128 -128 -128 -128 -128 -128 -128 -128 -128 ...
+##  $ pitch_arm               : num  22.5 22.5 22.5 22.1 22.1 22 21.9 21.8 21.7 21.6 ...
+##  $ yaw_arm                 : num  -161 -161 -161 -161 -161 -161 -161 -161 -161 -161 ...
+##  $ total_accel_arm         : int  34 34 34 34 34 34 34 34 34 34 ...
+##  $ var_accel_arm           : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ avg_roll_arm            : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ stddev_roll_arm         : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ var_roll_arm            : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ avg_pitch_arm           : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ stddev_pitch_arm        : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ var_pitch_arm           : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ avg_yaw_arm             : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ stddev_yaw_arm          : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ var_yaw_arm             : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ gyros_arm_x             : num  0 0.02 0.02 0.02 0 0.02 0 0.02 0.02 0.02 ...
+##  $ gyros_arm_y             : num  0 -0.02 -0.02 -0.03 -0.03 -0.03 -0.03 -0.02 -0.03 -0.03 ...
+##  $ gyros_arm_z             : num  -0.02 -0.02 -0.02 0.02 0 0 0 0 -0.02 -0.02 ...
+##  $ accel_arm_x             : int  -288 -290 -289 -289 -289 -289 -289 -289 -288 -288 ...
+##  $ accel_arm_y             : int  109 110 110 111 111 111 111 111 109 110 ...
+##  $ accel_arm_z             : int  -123 -125 -126 -123 -123 -122 -125 -124 -122 -124 ...
+##  $ magnet_arm_x            : int  -368 -369 -368 -372 -374 -369 -373 -372 -369 -376 ...
+##  $ magnet_arm_y            : int  337 337 344 344 337 342 336 338 341 334 ...
+##  $ magnet_arm_z            : int  516 513 513 512 506 513 509 510 518 516 ...
+##  $ kurtosis_roll_arm       : Factor w/ 330 levels &quot;&quot;,&quot;0.01388&quot;,&quot;0.01574&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ kurtosis_picth_arm      : Factor w/ 328 levels &quot;&quot;,&quot;-0.00484&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ kurtosis_yaw_arm        : Factor w/ 395 levels &quot;&quot;,&quot;-0.01548&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ skewness_roll_arm       : Factor w/ 331 levels &quot;&quot;,&quot;-0.00051&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ skewness_pitch_arm      : Factor w/ 328 levels &quot;&quot;,&quot;0.00000&quot;,&quot;-0.00184&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ skewness_yaw_arm        : Factor w/ 395 levels &quot;&quot;,&quot;0.00000&quot;,&quot;-0.00311&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ max_roll_arm            : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ max_picth_arm           : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ max_yaw_arm             : int  NA NA NA NA NA NA NA NA NA NA ...
+##  $ min_roll_arm            : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ min_pitch_arm           : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ min_yaw_arm             : int  NA NA NA NA NA NA NA NA NA NA ...
+##  $ amplitude_roll_arm      : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ amplitude_pitch_arm     : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ amplitude_yaw_arm       : int  NA NA NA NA NA NA NA NA NA NA ...
+##  $ roll_dumbbell           : num  13.1 13.1 12.9 13.4 13.4 ...
+##  $ pitch_dumbbell          : num  -70.5 -70.6 -70.3 -70.4 -70.4 ...
+##  $ yaw_dumbbell            : num  -84.9 -84.7 -85.1 -84.9 -84.9 ...
+##  $ kurtosis_roll_dumbbell  : Factor w/ 398 levels &quot;&quot;,&quot;0.0016&quot;,&quot;-0.0035&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ kurtosis_picth_dumbbell : Factor w/ 401 levels &quot;&quot;,&quot;0.0045&quot;,&quot;0.0130&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ kurtosis_yaw_dumbbell   : Factor w/ 2 levels &quot;&quot;,&quot;#DIV/0!&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ skewness_roll_dumbbell  : Factor w/ 401 levels &quot;&quot;,&quot;0.0011&quot;,&quot;0.0014&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ skewness_pitch_dumbbell : Factor w/ 402 levels &quot;&quot;,&quot;-0.0053&quot;,&quot;0.0063&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ skewness_yaw_dumbbell   : Factor w/ 2 levels &quot;&quot;,&quot;#DIV/0!&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ max_roll_dumbbell       : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ max_picth_dumbbell      : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ max_yaw_dumbbell        : Factor w/ 73 levels &quot;&quot;,&quot;0.0&quot;,&quot;-0.1&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ min_roll_dumbbell       : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ min_pitch_dumbbell      : num  NA NA NA NA NA NA NA NA NA NA ...
+##  $ min_yaw_dumbbell        : Factor w/ 73 levels &quot;&quot;,&quot;0.0&quot;,&quot;-0.1&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ amplitude_roll_dumbbell : num  NA NA NA NA NA NA NA NA NA NA ...
+##   [list output truncated]</code></pre>
+<p>I noticed there were a lot of variables with a large amount of empty values, NA and !DIV/X. I tried to get rid of these by removing the columns with near zero variance. I split my dataset in a training set and a validation set for cross validation.</p>
+<pre class="r"><code>inTrain = createDataPartition(pml.training$classe, p = 3/4)[[1]]
+training = pml.training[inTrain,-(1:6)]
+validation = pml.training[-inTrain,-(1:6)]
+testing = pml.testing[,-(1:6)]</code></pre>
+<p>I noticed there were a lot of variables with a large amount of empty values, NA and !DIV/X. I tried to get rid of these by removing the columns with near zero variance.</p>
 <pre class="r"><code>LowVar &lt;-nearZeroVar(training,freq=90/10)
 training_pruned&lt;-training[,-LowVar]</code></pre>
 <p>This was not sufficient to get rid of all the columns with a lot of NA. So I cleaned up the data set some more by removing columns with more than 14000 NA counts.</p>
@@ -102,7 +203,7 @@ testing_pruned2 &lt;- testing_pruned[,colSums(is.na(training_pruned))&lt;14000]<
 </div>
 <div id="modeling" class="section level3">
 <h3>Modeling</h3>
-<p>My first try was to use a Classification tree. I decided not to center and scale the variables, since this is not really useful for this method.</p>
+<p>My first try was to use a Classification tree. I decided not to center and scale the variables, since this is not really useful for this method. After training the model on the training set, I used the validation set for cross validation.</p>
 <pre class="r"><code>modFit1 &lt;- train(classe ~ .,method=&quot;rpart&quot;,data=training_pruned2)</code></pre>
 <pre><code>## Loading required namespace: e1071</code></pre>
 <pre class="r"><code>test_tree &lt;- predict(modFit1,validation_pruned2)
@@ -111,33 +212,33 @@ confusionMatrix(test_tree,validation_pruned2$classe)</code></pre>
 ## 
 ##           Reference
 ## Prediction    A    B    C    D    E
-##          A 1055  238   26   27   12
-##          B   91  397   11    0    0
-##          C   70  163  437   18   51
-##          D  177  151  381  759  438
+##          A 1269  415  412  366  135
+##          B   12  296   25  135  124
+##          C  112  238  418  303  242
+##          D    0    0    0    0    0
 ##          E    2    0    0    0  400
 ## 
 ## Overall Statistics
-##                                         
-##                Accuracy : 0.622         
-##                  95% CI : (0.608, 0.635)
-##     No Information Rate : 0.284         
-##     P-Value [Acc &gt; NIR] : &lt;2e-16        
-##                                         
-##                   Kappa : 0.525         
-##  Mcnemar's Test P-Value : NA            
+##                                       
+##                Accuracy : 0.486       
+##                  95% CI : (0.472, 0.5)
+##     No Information Rate : 0.284       
+##     P-Value [Acc &gt; NIR] : &lt;2e-16      
+##                                       
+##                   Kappa : 0.327       
+##  Mcnemar's Test P-Value : NA          
 ## 
 ## Statistics by Class:
 ## 
 ##                      Class: A Class: B Class: C Class: D Class: E
-## Sensitivity             0.756    0.418   0.5111    0.944   0.4440
-## Specificity             0.914    0.974   0.9254    0.720   0.9995
-## Pos Pred Value          0.777    0.796   0.5913    0.398   0.9950
-## Neg Pred Value          0.904    0.875   0.8996    0.985   0.8887
-## Prevalence              0.284    0.194   0.1743    0.164   0.1837
-## Detection Rate          0.215    0.081   0.0891    0.155   0.0816
-## Detection Prevalence    0.277    0.102   0.1507    0.389   0.0820
-## Balanced Accuracy       0.835    0.696   0.7183    0.832   0.7217</code></pre>
+## Sensitivity             0.910   0.3119   0.4889    0.000   0.4440
+## Specificity             0.622   0.9252   0.7790    1.000   0.9995
+## Pos Pred Value          0.489   0.5000   0.3184      NaN   0.9950
+## Neg Pred Value          0.945   0.8486   0.8783    0.836   0.8887
+## Prevalence              0.284   0.1935   0.1743    0.164   0.1837
+## Detection Rate          0.259   0.0604   0.0852    0.000   0.0816
+## Detection Prevalence    0.530   0.1207   0.2677    0.000   0.0820
+## Balanced Accuracy       0.766   0.6185   0.6339    0.500   0.7217</code></pre>
 <p>The result was a bit disappointing so I tried the random forest method next.</p>
 <pre class="r"><code>modFit2 &lt;- train(classe ~ .,method=&quot;rf&quot;,data=training_pruned2)
 test &lt;- predict(modFit2,validation_pruned2)
@@ -146,33 +247,42 @@ confusionMatrix(test,validation_pruned2$classe)</code></pre>
 ## 
 ##           Reference
 ## Prediction    A    B    C    D    E
-##          A 1395    1    0    0    0
-##          B    0  948    1    0    0
-##          C    0    0  852    0    0
-##          D    0    0    2  804    0
-##          E    0    0    0    0  901
+##          A 1395    4    0    0    0
+##          B    0  944    2    0    0
+##          C    0    0  852    2    0
+##          D    0    1    1  802    6
+##          E    0    0    0    0  895
 ## 
 ## Overall Statistics
-##                                     
-##                Accuracy : 0.999     
-##                  95% CI : (0.998, 1)
-##     No Information Rate : 0.284     
-##     P-Value [Acc &gt; NIR] : &lt;2e-16    
-##                                     
-##                   Kappa : 0.999     
-##  Mcnemar's Test P-Value : NA        
+##                                         
+##                Accuracy : 0.997         
+##                  95% CI : (0.995, 0.998)
+##     No Information Rate : 0.284         
+##     P-Value [Acc &gt; NIR] : &lt;2e-16        
+##                                         
+##                   Kappa : 0.996         
+##  Mcnemar's Test P-Value : NA            
 ## 
 ## Statistics by Class:
 ## 
 ##                      Class: A Class: B Class: C Class: D Class: E
-## Sensitivity             1.000    0.999    0.996    1.000    1.000
-## Specificity             1.000    1.000    1.000    1.000    1.000
-## Pos Pred Value          0.999    0.999    1.000    0.998    1.000
-## Neg Pred Value          1.000    1.000    0.999    1.000    1.000
+## Sensitivity             1.000    0.995    0.996    0.998    0.993
+## Specificity             0.999    0.999    1.000    0.998    1.000
+## Pos Pred Value          0.997    0.998    0.998    0.990    1.000
+## Neg Pred Value          1.000    0.999    0.999    1.000    0.999
 ## Prevalence              0.284    0.194    0.174    0.164    0.184
-## Detection Rate          0.284    0.193    0.174    0.164    0.184
-## Detection Prevalence    0.285    0.194    0.174    0.164    0.184
-## Balanced Accuracy       1.000    0.999    0.998    1.000    1.000</code></pre>
+## Detection Rate          0.284    0.192    0.174    0.164    0.183
+## Detection Prevalence    0.285    0.193    0.174    0.165    0.183
+## Balanced Accuracy       0.999    0.997    0.998    0.998    0.997</code></pre>
+</div>
+<div id="final-results" class="section level3">
+<h3>Final results</h3>
+<p>After cleaning up the data I used the Random Forest model to predict the results</p>
+<pre class="r"><code>test &lt;- predict(modFit2,testing_pruned2)
+test</code></pre>
+<pre><code>##  [1] B A B A A E D B A A B C B A E E A B B B
+## Levels: A B C D E</code></pre>
+<p>The expected error is equal to the error on the validation set. The result was 100% correct.</p>
 </div>
 
 
